--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "serve": "govuk-prototype-kit serve",
     "start": "govuk-prototype-kit start",
     "NODE_ENV": "production",
-    "PASSWORD": "verystrongpassword"
+    "PASSWORD": "verystrongpassword",
+    "USERNAME": "Elfutal"
   },
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "2.0.1",
