--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "scripts": {
     "dev": "govuk-prototype-kit dev",
     "serve": "govuk-prototype-kit serve",
-    "start": "govuk-prototype-kit start",
-    "NODE_ENV": "production",
-    "PASSWORD": "verystrongpassword",
-    "USERNAME": "Elfutal"
+    "start": "USERNAME=Elfutal PASSWORD=verystrongpassword govuk-prototype-kit start"
   },
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "2.0.1",
